test/ConstValues/Tuples.code
// Constant globals on tuples
// REQUIRES: language_feature_CompileTimeValues
// REQUIRES: language_feature_CompileTimeValuesPreview
// RUN: %target-language-frontend -emit-ir -primary-file %s -parse-as-library -enable-experimental-feature CompileTimeValues -enable-experimental-feature CompileTimeValuesPreview
// RUN: %target-language-frontend -emit-ir -primary-file %s -parse-as-library -enable-experimental-feature CompileTimeValues -verify

@const immutable constGlobal1: Int = 42
@const immutable constGlobal2: (Int, Int) = (42, 42)
@const immutable constGlobal3: (Int, Bool) = (42, true)
@const immutable constGlobal4: (Int, (Int, Int)) = (42, (42, 42))
@const immutable constGlobal5: (Int, Float) = (42, 42.0)

// Closure call not supported in syntactically-validated mode
@const immutable constGlobal7: (UInt64, StaticString, @convention(c) ()->Int) = (42, "hi", { return 42 }) // expected-error {{not supported in a '@const' expression}}
